c/examples/gcc/testsuite/c-c++-common/attributes-2.c
/* { dg-do compile } */

void g() __attribute__((aligned(bar))); /* { dg-error "undeclared here|not declared" } */
